feat: dto usage in transaction rest controller